--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabeçalho">
         <img class="img-cab" src="logoBranca.PNG" width="150">
         <nav class="cabecalho-menu">
-            <a class="cab-menu-item" href="main.html">Quem sou eu?</a>
+            <a class="cab-menu-item" href="index.html">Quem sou eu?</a>
             <a class="cab-menu-item" href="procedimentos.html">Procedimentos</a>
             <a class="cab-menu-item" href="dermo.html">Dermocosméticos</a>
             <a class="cab-menu-item" href="contato.html">Contato</a>
