--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <img class="img-cab" src="logoBranca.PNG" width="150">
+        <img class="img-cab" src="logoBranca.PNG" width="100">
         <nav class="cabecalho-menu">
             <a class="cab-menu-item" href="index.html">Quem sou eu?</a>
             <a class="cab-menu-item" href="procedimentos.html">Procedimentos</a>
@@ -27,9 +27,14 @@
         <img class="submarca" src="submarcas2.png" width="450">
         <a class="btn-section1" href="https://api.whatsapp.com/send/?phone=5571992385097&text&type=phone_number&app_absent=0" 
         target="_blank"><input type="button" class="btn" value="Agende uma consulta"></a>
-    </div></section><div class="div2">
+    </div></section>
+    <div class="div2">
     <section class="conteudo-sec">
-        <img class="imgsec2" src="mp2.png" width="500">
+        <picture>
+            <source media="(max-width: 500px)" scrset="mp_pq.png">
+             <img class="imgsec2" src="mp2.png">
+        </picture>
+       
     </section>
 </div>
 </main>
